--- a/README.Rmd
+++ b/README.Rmd
@@ -1,3 +1,6 @@
+<!-- badges: start -->
+  [![Travis build status](https://travis-ci.com/PhilBertrand/CPFMove.svg?branch=master)](https://travis-ci.com/PhilBertrand/CPFMove)
+  <!-- badges: end -->
 ---
 title: "Tutorial Movement"
 author: "Philip Bertrand"
